--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,12 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
-
+SESSION_DOMAIN=http://127.0.0.1:3000
+SANCTUM_STATEFUL_DOMAINS=http://127.0.0.1:3000
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=backend_users
 DB_USERNAME=root
 DB_PASSWORD=
 
